comp with kaizpatchx-1.10.1(1)